--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,14 @@
 {
-  "extends": "airbnb-base",
+  "extends": ["prettier"],
+  "plugins": ["prettier"],
   "env": {
     "node": true,
     "mocha": true,
     "es6": true
   },
-  "plugins": ["chai-friendly"],
+  "parser": "babel-eslint",
   "rules": {
+    "prettier/prettier": ["error"],
     "comma-dangle": 0,
     "consistent-return": 0,
     "function-paren-newline": ["error", "never"],
@@ -17,7 +19,9 @@
     "no-console": 0,
     "no-plusplus": 0,
     "no-unused-expressions": 0,
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
+    "no-unused-vars": ["error", {
+      "argsIgnorePattern": "next"
+    }],
     "chai-friendly/no-unused-expressions": 2
   }
 }
